--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SplashScreen.SetaraApp"
+        android:theme="@style/Theme.SetaraApp"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SplashScreen.SetaraApp">
+            android:theme="@style/Theme.SetaraApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
